# writer

./: .env.example  .gitignore  App.tsx  BlogWriter-Presentation.pptx  LICENSE  README.md  auth.ts  blog.css  build.ts  index.html  index.ts  package.json  styles.css
markdown/: 2025-10-20-slow-indexing-for-fast-search.md  2025-12-14-article-title-here.md  2025-12-22-traditional-software-with-language-model-twist.md
posts/: 2025-12-14-article-title-here.html  2025-12-14-testing-this.html  2025-12-22-programs.html  2025-12-22-traditional-software-with-language-model-twist.html  2025-12-23-slow-indexing-for-fast-search.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
supabase/migrations/: 00001_initial_schema.sql
