[package]
name = "writer"
version = "0.1.0"
description = "Writer — a local AI-guided markdown writing tool"
authors = ["Writer"]
edition = "2021"

[lib]
name = "writer_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
